deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: hello-app
  name: example-hello-app-deployment
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-app
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: hello-app
    spec:
      containers:
      - image: sharmanayan/hello-world:0.1.RELEASE
        imagePullPolicy: IfNotPresent
        name: hhello-app-container
        resources:
          requests:
            memory: "64Mi"     # Request 64 megabytes of memory
            cpu: "250m"        # Request 250 milliCPU (0.25 CPU cores)
          limits:
            memory: "128Mi"    # Limit memory usage to 128 megabytes
            cpu: "500m"        # Limit CPU usage to 500 milliCPU (0.5 CPU cores)
      restartPolicy: Always
      terminationGracePeriodSeconds: 30

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hello-world
  name: hello-world
  namespace: default
spec:
  ports:
  - nodePort: 31738
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: hello-app-svc
  sessionAffinity: None
  type: LoadBalancer

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world-ingress
  namespace: default
spec:
  rules:
  - host: hello-world.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hello-world
            port:
              number: 8080
